Fix spacing between stock search bar and portfolio
- Set portfolio grid row spacing to 1 fr so it'll take up the remaining space 
- Fixed stock search bar causing items to shift when hovering creates a border.

--- a/FomoApp/ClientApp/src/features/stockSearch/StockSearchBar.css
+++ b/FomoApp/ClientApp/src/features/stockSearch/StockSearchBar.css
@@ -10,7 +10,7 @@
     border-radius: 1rem;
     align-items: center;
     align-content: center;
-    margin: 0px;
+    box-sizing: border-box;
 }
 
 #stock-search-bar-form:hover {
